testsuite/poke.pkl/array-type-diag-2.pk
/* { dg-do compile } */

void[][](); /* { dg-error "not allowed" } */
